tenants/dashboard/dev/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    istio-injection: enabled
