tenants/dashboard/dev/dashboard/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress
  namespace: dashboard
spec:
  selector:
    app: dashboard-istio-gateway
    istio: dashboard-istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tekton
  namespace: dashboard
spec:
  hosts:
    - tekton.127-0-0-1.sslip.io
  gateways:
    - dashboard/ingress
  http:
    - name: tekton
      route:
        - destination:
            host: tekton-dashboard.tekton-pipelines.svc.cluster.local
